Fixed overlapping slider

--- a/src/componentStyles/objects/Slider.css
+++ b/src/componentStyles/objects/Slider.css
@@ -14,7 +14,6 @@
 .slider {
 	width: 80%;
 	pointer-events: all !important;
-	z-index: 100;
 	cursor: w-resize !important;
 }
 
